@@ -630,6 +630,11 @@ struct RemoteFixture {
     REQUIRE(0 == ham_cursor_find(cursor, &key, &rec2, 0));
     REQUIRE(rec.size == rec2.size);
     REQUIRE(0 == strcmp((char *)rec.data, (char *)rec2.data));
+
+    uint64_t size;
+    REQUIRE(0 == ham_cursor_get_record_size(cursor, &size));
+    REQUIRE(size == 12);
+
     REQUIRE(HAM_DUPLICATE_KEY ==
         ham_cursor_insert(cursor, &key, &rec, 0));
     REQUIRE(0 ==
